# DataAgent

./: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Data Agent 产品需求.docx  DataPilot-开发方案.md  Makefile  docker-compose.dev.yml  docker-compose.override.yml  pyproject.toml  分析报告与需求文档结构（预览）.docx  报告结构与要点预览.docx
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  (+10 more)
libs/datapilot-chart/: pyproject.toml
libs/datapilot-chart/src/datapilot_chart/: __init__.py  adapter.py  config_factory.py  models.py  themes.py  type_infer.py
libs/datapilot-chart/src/datapilot_chart/dashboard/: __init__.py  builder.py  filter.py  layout.py  models.py  serialization.py
libs/datapilot-common/: pyproject.toml
libs/datapilot-common/src/datapilot_common/: __init__.py  config.py  database.py  exceptions.py  logging.py  metrics.py
libs/datapilot-common/src/datapilot_common/middleware/: __init__.py  error_handler.py
libs/datapilot-dag/: pyproject.toml
libs/datapilot-dag/src/datapilot_dag/: __init__.py  builder.py  models.py  plan.py  serialization.py
libs/datapilot-dag/src/datapilot_dag/executor/: __init__.py  base.py  llm_executor.py  python_executor.py  registry.py  result.py  scheduler.py  sql_executor.py
libs/datapilot-llm/: pyproject.toml
libs/datapilot-llm/src/datapilot_llm/: __init__.py  client.py  config.py  function_calling.py  logger.py  provider.py  router.py  tool_executor.py  tool_selector.py
libs/datapilot-llm/src/datapilot_llm/prompts/: __init__.py  tool_prompts.py
libs/datapilot-llm/src/datapilot_llm/providers/: __init__.py  deepseek.py  qwen.py
libs/datapilot-memory/: pyproject.toml
libs/datapilot-memory/src/datapilot_memory/: __init__.py  context_window.py  manager.py  models.py  store.py  summarizer.py
libs/datapilot-prompt/: pyproject.toml
libs/datapilot-prompt/src/datapilot_prompt/: __init__.py  ab_testing.py  budget.py  models.py  schemas.py  service.py
libs/datapilot-sandbox/: pyproject.toml
libs/datapilot-sandbox/src/datapilot_sandbox/: __init__.py  allowed_modules.py  models.py  sandbox.py  security.py
libs/datapilot-sandbox/src/datapilot_sandbox/k8s/: __init__.py  lifecycle.py  local_pool.py  monitor.py  pool.py  reaper.py
libs/datapilot-sandbox/src/datapilot_sandbox/local/: __init__.py  environment.py  executor.py  output.py  timeout.py
libs/datapilot-tools/: pyproject.toml
libs/datapilot-tools/src/datapilot_tools/: __init__.py  builtin.py  description.py  executor.py  models.py  registry.py  validator.py
services/agent-service/: Dockerfile  pyproject.toml
services/agent-service/src/datapilot_agent/: __init__.py  main.py
services/agent-service/src/datapilot_agent/chart/: __init__.py  description.py  prompts.py  recommender.py
services/agent-service/src/datapilot_agent/dag/: __init__.py  nl2sql_dag.py  store.py
services/agent-service/src/datapilot_agent/dashboard/: __init__.py  store.py
services/agent-service/src/datapilot_agent/llm/: __init__.py  context_enricher.py  llm_fallback.py
services/agent-service/src/datapilot_agent/observability/: __init__.py  circuit_breaker.py  health.py  metrics.py  middleware.py  retry.py
services/agent-service/src/datapilot_agent/rca/: __init__.py  anomaly_detector.py  attribution.py  drill_down.py  interpreter.py  models.py  orchestrator.py  store.py
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_users.py
services/auth-service/src/datapilot_auth/: __init__.py  config.py  database.py  exceptions.py  main.py
services/auth-service/src/datapilot_auth/models/: __init__.py  user.py
services/auth-service/src/datapilot_auth/schemas/: auth.py
services/auth-service/src/datapilot_auth/services/: jwt.py
services/guardrail-service/: Dockerfile  pyproject.toml
services/guardrail-service/src/datapilot_guardrail/: __init__.py  checker.py  main.py  models.py  quota.py  row_limit.py  sql_risk.py
services/query-executor-service/: Dockerfile  pyproject.toml
services/query-executor-service/src/datapilot_queryexec/: __init__.py  main.py
services/query-executor-service/src/datapilot_queryexec/api/: __init__.py
services/query-executor-service/src/datapilot_queryexec/cache/: __init__.py  freshness.py  manager.py  minio_cache.py  redis_cache.py  strategy.py
services/query-executor-service/src/datapilot_queryexec/connectors/: __init__.py  base.py  capabilities.py  clickhouse.py  doris.py  factory.py  mysql.py  postgresql.py  retry.py
services/query-executor-service/src/datapilot_queryexec/executor/: __init__.py  engine.py  formatter.py  models.py  pagination.py  task_manager.py
services/query-executor-service/src/datapilot_queryexec/monitor/: __init__.py  circuit.py  health.py  metrics.py  models.py
services/query-executor-service/src/datapilot_queryexec/rbac/: __init__.py  checker.py  column_filter.py  masking.py  models.py  operation_guard.py  row_filter.py
services/semantic-service/: Dockerfile  alembic.ini  pyproject.toml
services/semantic-service/alembic/: env.py
services/semantic-service/alembic/versions/: 20260527_001_create_semantic_tables.py
services/semantic-service/src/datapilot_semantic/: __init__.py
services/semantic-service/src/datapilot_semantic/api/: dependencies.py
services/semantic-service/src/datapilot_semantic/metadata/: __init__.py  datasource_pool.py  models.py  schema_extractor.py  schemas.py  service.py  sync_worker.py
services/semantic-service/src/datapilot_semantic/models/: __init__.py  dimension.py  metric.py  metric_dimension.py  schemas.py  semantic_model.py  service.py  table_relationship.py
services/session-service/: Dockerfile  alembic.ini  pyproject.toml
services/session-service/alembic/: env.py
services/session-service/alembic/versions/: 0001_sessions_messages.py
services/session-service/src/datapilot_session/: __init__.py  config.py  database.py  exceptions.py
services/sql-generator-service/: Dockerfile  pyproject.toml
services/sql-generator-service/src/datapilot_sqlgen/: __init__.py  main.py
(+326 files in other folders)
