[project]
name = "datapilot-chart"
version = "0.1.0"
description = "DataPilot Chart: 图表规范统一、类型推断、ECharts 配置生成"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_chart"]
