[project]
name = "datapilot-common"
version = "0.1.0"
description = "DataPilot shared utilities: config, logging, exceptions, database, metrics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "starlette-exporter>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_common"]
