[project]
name = "datapilot-dag"
version = "0.1.0"
description = "DataPilot DAG Builder and Executor runtime"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_dag"]
