[project]
name = "datapilot-llm"
version = "0.1.0"
description = "DataPilot LLM abstraction layer: multi-provider, routing, circuit breaker, cost tracking"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_llm"]
