[project]
name = "datapilot-prompt"
version = "0.1.0"
description = "DataPilot prompt management: versioning, A/B testing, token budget"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "redis>=5.0",
    "structlog>=24.0",
    "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
