[project]
name = "datapilot-sandbox"
version = "0.1.0"
description = "DataPilot Python Sandbox: secure code execution environment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_sandbox"]
