[project]
name = "datapilot-tools"
version = "0.1.0"
description = "DataPilot Tool Registry: 工具注册、发现和执行"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_tools"]
