[project]
name = "datapilot-agent"
version = "0.1.0"
description = "DataPilot Agent Service: chat, SSE streaming, intent routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.0",
    "datapilot-common",
    "datapilot-license",
]
