[project]
name = "datapilot-guardrail"
version = "0.1.0"
description = "DataPilot Guardrail Service: SQL risk, cost, RBAC, data masking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    "redis>=5.0",
    "httpx>=0.27",
    "datapilot-common",
    "datapilot-sql",
    "prometheus-fastapi-instrumentator>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_guardrail"]
