[project]
name = "datapilot-queryexec"
version = "0.1.0"
description = "DataPilot Query Executor Service: multi-source connectors, async execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiomysql>=0.2",
    "asyncpg>=0.30",
    "asynch>=0.2",
    "minio>=7.2",
    "structlog>=24.4",
    "redis>=5.0",
    "sqlglot>=26.0",
    "datapilot-common",
]
