[project]
name = "datapilot-semantic"
version = "0.1.0"
description = "DataPilot Semantic Service: models, metadata, vector search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "datapilot-common",
    "pgvector>=0.3",
    "alembic>=1.13",
    "httpx>=0.27",
    "structlog>=24.1",
    "redis>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.9",
    "sqlglot>=26.0",
]
