[project]
name = "datapilot-session"
version = "0.1.0"
description = "DataPilot Session Service: session CRUD, context, memory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "alembic>=1.14",
    "datapilot-common",
]
