[project]
name = "datapilot-sqlgen"
version = "0.1.0"
description = "DataPilot SQL Generator Service: NL2SQL core, AST builder, validation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "structlog>=24.0",
    "pydantic>=2.9",
    "datapilot-common",
    "datapilot-sql",
    "datapilot-prompt",
    "datapilot-llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot_sqlgen"]
